extracting image data

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="controls">
         <label>
           Resolution
-          <input type="number" class="resolution" />
+          <input type="number" class="resolution" value="10" />
         </label>
         <label>
           New Image
@@ -30,9 +30,10 @@
     </div>
 
     <script src="js/underscore.js"></script>
-    <script src="js/math.js"></script>
-    <script src="js/object.js"></script>
-    <script src="js/head.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/blobable_image.js"></script>
+    <script src="js/gallery.js"></script>
+    <script src="js/preview.js"></script>
+    <script src="js/blob.js"></script>
+    <script src="js/init.js"></script>
   </body>
 </html>
