--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     </div>
 
     <script src="js/underscore.js"></script>
+    <script src="js/velocity.min.js"></script>
     <script src="js/blobable_image.js"></script>
     <script src="js/gallery.js"></script>
     <script src="js/preview.js"></script>
